User auth finished

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,6 +62,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylsheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>React App</title>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 
 <body>
